# py-plpipes

./: pyproject.toml  staticwebapp.config.json
.github/workflows/: azure-static-web-apps-lemon-river-0b5289d10.yml
