[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Home = "https://github.com/PredictLand/PL-TEC-PLPipes"

[project]
name = "plpipes"
authors = [{name = "PredictLand", email = "info@predictland.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.3"
description = "PredictLand Data Science Framwork"

dependencies = [
    "requests >=2.0",
    "duckdb >=0.6",
    "duckdb-engine >=0.6",
    "numpy >=1.14",
    "PyYAML >=6.0",
    "Jinja2 >=3.1",
    "pandas >=1.5",
    "SQLAlchemy >=2.0",
    "prql-python >=0.3",
    "httpx >=0.23",
    "sqlparse >= 0.5",
    "friendlydateparser > 0.2.2",
    "findapp >= 0.0.1",
    "colorlog >= 6.9.0"
]

[project.optional-dependencies]
odbc = [
    "pyodbc >=4.0"
]

jupyter = [
    "jupyterlab >=1.0",
    "pyprql >=0.5",
    "ipython-sql >=0.4"
]

azure = [
    "azure-identity",
]

msgraph = [
    "azure-identity",
    "ms-graph-client"
]

docs = [
    "mkdocs >=1.6",
    "mkdocs-material >=9",
    "mkdocstrings[python] >=0.24",
    "mkdocs-mermaid2-plugin >=1.1",
    "mkdocs-gen-files >=0.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]
